refactor: correct user implementation and add swagger for files
